// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render button component correctly 1`] = `
<button
  type="button"
/>
`;

exports[`Button component should render button component with props 1`] = `
<button
  className="hellostyle"
  type="button"
>
  hello
</button>
`;
